[package]
name = "crypto_helper_wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
getrandom = { version = "0.2", features = ["js"] }
sha2 = "0.10"
hmac = "0.12"
aes = "0.8"
aes-gcm = "0.10"
block-modes = "0.9"
ctr = "0.9"
digest = "0.10"
cipher = "0.4"

